--- a/IMW-A1-Draft-Artifact/blue-letters.css
+++ b/IMW-A1-Draft-Artifact/blue-letters.css
@@ -1,6 +1,6 @@
 .text-session1 {
-  left: 0;
-  top: -700px;
+  left: 50px;
+  top: -1400px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -8,15 +8,15 @@
 
 .text-one {
   left: 700px;
-  top: -910px;
+  top: -1580px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
 }
 
 .text-session2 {
-  left: 0;
-  top: 50px;
+  left: 50px;
+  top: -910px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -24,15 +24,15 @@
 
 .text-two {
   left: 700px;
-  top: -150px;
+  top: -1090px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
 }
 
 .text-session3 {
-  left: 0;
-  top: 1050px;
+  left: 50px;
+  top: -220px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -40,15 +40,15 @@
 
 .text-three {
   left: 700px;
-  top: 850px;
+  top: -400px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
 }
 
 .text-session4 {
-  left: 0;
-  top: 1600px;
+  left: 50px;
+  top: -1020px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -56,15 +56,15 @@
 
 .text-four {
   left: 700px;
-  top: 1400px;
+  top: -1190px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
 }
 
 .text-session5 {
-  left: 0;
-  top: 2100px;
+  left: 50px;
+  top: -720px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -72,7 +72,7 @@
 
 .text-five {
   left: 700px;
-  top: 1900px;
+  top: -890px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
