--- a/IMW-A1-Draft-Artifact/letter-style.css
+++ b/IMW-A1-Draft-Artifact/letter-style.css
@@ -1,7 +1,13 @@
+/* THE COMPLETE ALPHABET STAGE */
+.letter {
 
-
-
-
+  width: 280px; /*resize as you see fit */
+  height: 530px; /*resize as you see fit */
+  display: inline-block; /* this makes block level elements act like letters (so they sit next to eachother) */
+  border: 1px solid #000; /*feel free to remove or hide this rule */
+  position: relative; /* IMPORTANT: any element with position:absolute inside this container will now be relative to bounds of this element; */
+  overflow: hidden;
+}
 
 
 
