--- a/IMW-A1-Draft-Artifact/poster-layout.css
+++ b/IMW-A1-Draft-Artifact/poster-layout.css
@@ -10,7 +10,7 @@
 
 .letter-A {
   width: 160px;
-  margin-left: 30px;
+  margin-left: -12px;
 }
 
 .letter-B {
@@ -21,11 +21,14 @@
 
 .letter-C {
   width: 120px;
+  margin-left: -2px;
+  margin-right: 45px;
 }
 
 .letter-D {
   width: 160px;
-  margin-right: 8px;
+  margin-left: -48px;
+  margin-right: 47px;
 }
 
 .letter-E {
@@ -36,25 +39,29 @@
 
 .letter-F {
   width: 160px;
-  margin-right: 40px;
+  margin-right: 45px;
 }
 
 .letter-G {
   width: 160px;
+  margin-left: -5px;
+  margin-right: 10px;
 }
 
 .letter-H {
   width: 200px;
-  margin-left: -5px;
+  margin-left: -30px;
 }
 
 .letter-I {
   width: 120px;
-  margin-left: -40px;
+  margin-left: -48px;
+  margin-right: 5px;
 }
 
 .letter-K {
   width: 200px;
+  margin-right: -5px;
 }
 
 .letter-M {
@@ -64,61 +71,70 @@
 
 .letter-N {
   width: 200px;
+  margin-left: -40px;
 }
 
 .letter-O {
   width: 120px;
-  margin-left: 30px;
+  margin-left: -10px;
   margin-right: 40px;
 }
 
 .letter-P {
   width: 160px;
-  margin-right: 40px;
+  margin-right: 48px;
 }
 
 .letter-R {
   width: 200px;
   margin-left: -40px;
+  margin-right: 9px;
 }
 
 .letter-S {
   width: 120px;
-  margin-left: 40px;
-  margin-right: 40px;
+  margin-left: -10px;
+  margin-right: 48px;
 }
 
 .letter-T {
   width: 155px;
+  margin-left: -40px;
+  margin-right: 30px
 }
 
 .letter-U {
   width: 200px;
+  margin-left: -30px;
 }
 
 .letter-V {
   width: 160px;
+  margin-left: -40px;
+  margin-right: 40px;
 }
 
 .letter-W {
   width: 240px;
-  margin-right: 40px;
+  margin-left: -33px;
+  margin-right: 45px;
 }
 
 .letter-X {
   width: 200px;
   margin-left: -40px;
-  margin-right: -40px;
+  margin-right: 0;
 }
 
 .letter-Y {
   width: 160px;
   margin-left: -40px;
+  margin-right: 40px;
 }
 
 .letter-Z {
   width: 120px;
-  margin-right: 40px;
+  margin-right: 47px;
 }
 
 
@@ -127,174 +143,174 @@
 .paragraph-1 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 700px;
-  position: absolute;
+  top: -900px;
+  position: relative;
 }
 
 .paragraph-2 {
   font: 22px Helvetica, sans-serif;
-  left: 100px;
-  top: 2275px;
-  position: absolute;
+  left: 220px;
+  top: -1650px;
+  position: relative;
 }
 
 .paragraph-3 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 2750px;
-  position: absolute;
+  top: -2300px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-4 {
   font: 22px Helvetica, sans-serif;
   left: 600px;
-  top: 3100px;
-  position: absolute;
+  top: -2600px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-5 {
   font: 22px Helvetica, sans-serif;
   left: 1100px;
-  top: 3450px;
-  position: absolute;
+  top: -2900px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-6 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 4310px;
-  position: absolute;
+  top: -3560px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-7 {
   font: 22px Helvetica, sans-serif;
   left: 600px;
-  top: 4660px;
-  position: absolute;
+  top: -3700px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-8 {
   font: 22px Helvetica, sans-serif;
   left: 1100px;
-  top: 5010px;
-  position: absolute;
+  top: -4000px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-9 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 6070px;
-  position: absolute;
+  top: -4650px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-10 {
   font: 22px Helvetica, sans-serif;
   left: 600px;
-  top: 6420px;
-  position: absolute;
+  top: -4930px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-11 {
   font: 22px Helvetica, sans-serif;
   left: 1100px;
-  top: 6600px;
-  position: absolute;
+  top: -5080px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-12 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 7500px;
-  position: absolute;
+  top: -5750px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-13 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 8240px;
-  position: absolute;
+  top: -6400px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-14 {
   font: 22px Helvetica, sans-serif;
-  left: 100px;
-  top: 9590px;
-  position: absolute;
+  left: 60px;
+  top: -6915px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-15 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 10070px;
-  position: absolute;
+  top: -7520px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-16 {
   font: 22px Helvetica, sans-serif;
   left: 600px;
-  top: 10420px;
-  position: absolute;
+  top: -7530px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-17 {
   font: 22px Helvetica, sans-serif;
   left: 1100px;
-  top: 10570px;
-  position: absolute;
+  top: -7840px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-18 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 11440px;
-  position: absolute;
+  top: -8300px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-19 {
   font: 22px Helvetica, sans-serif;
   left: 600px;
-  top: 11790px;
-  position: absolute;
+  top: -8290px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-20 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 12730px;
-  position: absolute;
+  top: -8940px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-21 {
   font: 22px Helvetica, sans-serif;
   left: 100px;
-  top: 13440px;
-  position: absolute;
+  top: -9560px;
+  position: relative;
   width: 400px;
 }
 
 .paragraph-22 {
   font: 22px Helvetica, sans-serif;
-  left: 780px;
-  top: 14065px;
-  position: absolute;
+  left: 730px;
+  top: -9740px;
+  position: relative;
 }
 
 
@@ -305,7 +321,7 @@
 
 /* THEORIZING the web KERNING */
 .text-theorizing {
-  left: 50px;
+  left: 80px;
   top: 0;
   position: relative;
   transform: scale(0.8);
@@ -343,7 +359,7 @@
 /* PROGRAM */
 .text-program {
   left: 50px;
-  top: -690px;
+  top: -890px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -356,7 +372,7 @@
 /* FRIDAY october sixteen */
 .text-friday {
   left: 50px;
-  top: -860px;
+  top: -1060px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -371,7 +387,7 @@
 /* friday OCTOBER sixteen */
 .text-october-16 {
   left: 300px;
-  top: -1040px;
+  top: -1240px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -385,7 +401,7 @@
 /* friday october SIXTEEN */
 .text-sixteen {
   left: 520px;
-  top: -1220px;
+  top: -1420px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -398,8 +414,8 @@
 
 /* SATURDAY october seventeen */
 .text-saturday {
-  left: 50px;
-  top: -510px;
+  left: 80px;
+  top: -6340px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -411,8 +427,8 @@
 
 /* saturday OCTOBER seventeen */
 .text-october-17 {
-  left: 305px;
-  top: -680px;
+  left: 205px;
+  top: -6510px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -425,7 +441,7 @@
 /* saturday october SEVENTEEN */
 .text-seventeen {
   left: 340px;
-  top: -850px;
+  top: -6680px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -436,14 +452,10 @@
 
 
 
-
-
-
-
 /* PARTY */
 .text-party {
   left: 50px;
-  top: -1180px;
+  top: -9510px;
   position: relative;
   transform: scale(0.8);
   transform-origin: 0 0;
@@ -3010,7 +3022,7 @@
 .whiteout-topleft-R {
   background: white;
 	width: 40px;
-	height: 280px;
+	height: 70px;
 	position: absolute;
 	left: 0;
 	top: 70px;
